[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "NoEscapeBot"
description = "A Discord bot that tracks the availability of the escalators and lifts at Macquarie University Metro station."
version = "2024.03.19"

authors = [
  { name = "jahinzee", email = "jahinzee@outlook.com" },
  { name = "JMA-256" }
]
readme = "README.md"
license = {file = "LICENSE"}

dependencies = [
  "pycord"
]
