[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/NoEscapeBot"]

[project]
name = "NoEscapeBot"
description = "A Discord bot that tracks the availability of the escalators and lifts at Macquarie University Metro station."
version = "2024.03.19"

authors = [
  { name = "jahinzee", email = "jahinzee@outlook.com" },
  { name = "JMA-256" },
  { name = "Bev7787", email = "eregister2me@gmail.com" }
]
readme = "README.md"
license = {file = "LICENSE"}

dependencies = [
  "py-cord",
  "python-dotenv"
]
